--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,7 @@ body {
 	display: block; 
 	vertical-align: middle; 
 	display: table-cell;
-	font: 24px helveticaneuecyr-light, Verdana, Geneva, sans-serif; 
+	font: 23px 'helveticaneuecyr-light', Verdana, Geneva, sans-serif; 
 	color: #9D9E9F; 
 	text-decoration: none;
 
@@ -101,7 +101,7 @@ body {
 
 .text-block	p {
 	text-transform: uppercase;
-	font-size: 24px;
+	font-size: 22px;
 	color: #9D9E9F;
 }
 
